# Sinfar-NWNX-Public

./: .gitignore  CMakeLists.txt
common/include/: NWNXLib.h  nwn_const.h  nwn_types.h
common/include/structs/: C2DA.h  CAppManager.h  CDialogReply.h  CDialogSpeak.h  CExoArrayList.h  CExoBase.h  CExoLinkedList.h  CExoLinkedListHeader.h  CExoLinkedListNode.h  CExoLocStringElement.h  CExoResMan.h  CExoString.h  CExoStringList.h  CExoTimers.h  CFactionManager.h  CGameEffect.h  CGameObject.h  CGameObjectArray.h  CGameObject_VTable.h  CLastUpdateObject.h  CNWBaseItem.h  CNWBaseItemArray.h  CNWCCMessageData.h  CNWRules.h  CNWSAction.h  CNWSArea.h  CNWSAreaOfEffectObject.h  CNWSBarter.h  CNWSCombatAttackData.h  CNWSCombatRound.h  CNWSCreature.h  CNWSCreatureClass.h  CNWSCreatureStats.h  CNWSDialog.h  CNWSDoor.h  CNWSEncounter.h  CNWSFaction.h  CNWSInventory.h  CNWSItem.h  CNWSMessage.h  (+29 more)
nwnx_ee/: BNMessage.cpp  BNMessage.h  CMakeLists.txt  core.cpp  core.h  nwn_ee_support.cpp  player.cpp  player.h
