cmake_minimum_required(VERSION 2.8)
project(nwnx)
file(GLOB common_source_files "common/*.cpp" "common/include/*.cpp" "common/hook/*.cpp")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/common")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
link_directories("${CMAKE_CURRENT_SOURCE_DIR}/libs")
set(NWNX_TARGETS "nwnx_ee")
add_subdirectory("nwnx_ee")
set_property(TARGET ${NWNX_TARGETS} PROPERTY RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/libs")
set_property(TARGET ${NWNX_TARGETS} PROPERTY LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/libs")
set_property(TARGET ${NWNX_TARGETS} APPEND_STRING PROPERTY COMPILE_FLAGS " -m32 -std=gnu++14 -O3 -fno-omit-frame-pointer -Wall -Wno-unused-result -Wno-strict-aliasing")
set_property(TARGET ${NWNX_TARGETS} APPEND_STRING PROPERTY LINK_FLAGS " -m32 -Wl,--no-undefined")
set_property(TARGET ${NWNX_TARGETS} PROPERTY PREFIX "")
set_property(TARGET ${NWNX_TARGETS} PROPERTY POSITION_INDEPENDENT_CODE OFF)
